	  (LMTP doesn't support mixed proxy/non-proxy destinations currently.)
	+ doveadm: Added -F <file> parameter to read a list of users from the
	  given file and run the command for all the users. This is similar to
	  -A parameter reading the list of users from userdb lookup.
	+ Implemented initial Cassandra CQL support as lib-sql backend. It's
	  only usable as dict backend currently.
	- auth: If auth_master_user_separator was set, auth process could be
	  crashed by trying to log in with empty master username.
	- imap-login, pop3-login: Fixed crash on handshake failures with new
	  OpenSSL versions (v1.0.2) when SSLv3 was disabled.
	- auth: If one passdb fails allow_nets check, it shouldn't have failed
	  all the other passdb checks later on.
	- imap: Server METADATA couldn't be accessed
	- imapc: Fixed \Muted label handling in gmail-migration.
	- imapc: Various bugfixes and improvements.
	- Trash plugin fixes by Alexei Gradinari
	- mbox: Fixed crash/corruption in some situations when the first mail
	  was expunged.

v2.2.16 2015-03-12  Timo Sirainen <tss@iki.fi>

	* dbox: Resyncing (e.g. doveadm force-resync) no longer deletes
	  dovecot.index.cache file. The cache file was rarely the problem
	  so this just caused unnecessary slowness.
	* Mailbox name limits changed during mailbox creation: Each part of
	  a hierarchical name (e.g. "x" or "y" in "x/y") can now be up to 255
	  chars long (instead of 200). This also reduces the max number of
	  hierarchical levels to 16 (instead of 20) to keep the maximum name
	  length 4096 (a common PATH_MAX limit). The 255 char limit is
	  hopefully large enough for migrations from all existing systems.
	  It's also the limit on many filesystems.

	+ director: Added director_consistent_hashing setting to enable
	  consistent hashing (instead of the mostly-random MD5 hashing).
	  This causes fewer user moves between backends when backend counts
	  are changed, which may improve performance (mainly due to caching).