@@ -34,6 +34,7 @@ v2.2.17 2015-05-xx  Timo Sirainen <tss@iki.fi>
 	  -A parameter reading the list of users from userdb lookup.
 	+ Implemented initial Cassandra CQL support as lib-sql backend. It's
 	  only usable as dict backend currently.
+	+ Added quota-clone plugin to copy current quota usage to a dict.
 	- auth: If auth_master_user_separator was set, auth process could be
 	  crashed by trying to log in with empty master username.
 	- imap-login, pop3-login: Fixed crash on handshake failures with new
